erDiagram
    STATES ||--o{ CITIES : possui
    CITIES ||--o{ CHURCHES : localiza
    CITIES ||--o{ MEMBERS : endereco
    AREAS ||--o{ CHURCHES : agrupa
    AREAS ||--o{ DEPARTMENTS : organiza
    AREAS ||--o{ POSITIONS : cataloga
    DEPARTMENTS o|--o{ POSITIONS : categoriza
    MEMBERS ||--o{ MEMBER_CHURCH_MEMBERSHIPS : participa
    CHURCHES ||--o{ MEMBER_CHURCH_MEMBERSHIPS : recebe
    MEMBER_CHURCH_MEMBERSHIPS ||--o{ MEMBER_POSITION_ASSIGNMENTS : exerce
    POSITIONS ||--o{ MEMBER_POSITION_ASSIGNMENTS : define
    POSITIONS ||--o{ POSITION_PERMISSIONS : concede
    PERMISSION_MODULES ||--o{ POSITION_PERMISSIONS : protege
    MEMBERS o|--o| USERS : possui_credencial

    AREAS {
        uuid id PK
        varchar name UK
        varchar description
        enum status
    }
    CHURCHES {
        uuid id PK
        uuid area_id FK
        bigint city_id FK
        varchar name
        enum status
    }
    DEPARTMENTS {
        uuid id PK
        uuid area_id FK
        varchar name
        varchar description
        enum status
    }
    POSITIONS {
        uuid id PK
        uuid area_id FK
        uuid department_id FK
        varchar name
        varchar description
        boolean grants_system_access
        boolean fixed
        enum status
    }
    MEMBERS {
        uuid id PK
        varchar name
        varchar cpf UK
        varchar email
        enum status
    }
    MEMBER_CHURCH_MEMBERSHIPS {
        uuid id PK
        uuid member_id FK
        uuid church_id FK
        enum status
        boolean is_primary
        date joined_at
        date ended_at
    }
    MEMBER_POSITION_ASSIGNMENTS {
        uuid id PK
        uuid member_church_membership_id FK
        uuid position_id FK
        enum status
        date started_at
        date ended_at
    }
    USERS {
        uuid id PK
        uuid member_id FK,UK
        varchar display_name
        varchar username UK
        varchar password
        enum status
        boolean is_global_administrator
        boolean must_change_password
        timestamp last_login_at
    }
    PERMISSION_MODULES {
        uuid id PK
        varchar key UK
        varchar name
        varchar category
        enum status
    }
    POSITION_PERMISSIONS {
        uuid id PK
        uuid position_id FK
        uuid permission_module_id FK
        enum level
    }
    AUDIT_LOGS {
        uuid id PK
        uuid actor_user_id
        varchar action
        varchar resource
        varchar record_id
        varchar scope_type
        uuid scope_id
        jsonb details
        timestamp created_at
    }
